# wasm-workflow

./: .gitignore  Cargo.toml
common/src/: lib.rs  operation.rs  request.rs  response.rs
guest/: Cargo.toml
guest-test/: Cargo.toml
guest-test/src/: lib.rs
guest/src/: actions.rs  event.rs  executor.rs  guest_interface.rs  lib.rs  state.rs  store.rs
host/: Cargo.toml
host/src/: main.rs  program.rs
host/src/db/: db_handler.rs  mod.rs
host/src/route/: create.rs  mod.rs  update.rs
host/src/wasm/: mod.rs  module_cache.rs  program.rs
